--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,8 @@
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
+
 ::before,
 ::after,
 * {
@@ -10,7 +15,7 @@ html,
 body {
   height: 100vh;
   color: white;
-  background-color: black;
+  background-color: #0c0a0b;
 }
 
 a {
