--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -1,12 +1,12 @@
 .playButton {
   position: relative;
-  padding: 12px 35px;
-  background: #3e1720;
-  font-size: 17px;
+  padding: 17px 40px;
+  background: var(--main-color);
+  font-size: 40px;
   font-weight: 500;
   color: white;
   border: 1px solid white;
-  border-radius: 8px;
+  border-radius: 20px;
   box-shadow: 0 0 0 #fec1958c;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
@@ -16,7 +16,7 @@
   position: absolute;
   top: 20%;
   left: 20%;
-  width: 25px;
+  width: 30px;
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
@@ -27,7 +27,7 @@
   position: absolute;
   top: 45%;
   left: 45%;
-  width: 15px;
+  width: 20px;
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
@@ -38,7 +38,7 @@
   position: absolute;
   top: 40%;
   left: 40%;
-  width: 5px;
+  width: 10px;
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
@@ -49,7 +49,7 @@
   position: absolute;
   top: 20%;
   left: 40%;
-  width: 8px;
+  width: 15px;
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
@@ -60,7 +60,7 @@
   position: absolute;
   top: 25%;
   left: 45%;
-  width: 15px;
+  width: 20px;
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
@@ -71,7 +71,7 @@
   position: absolute;
   top: 5%;
   left: 50%;
-  width: 5px;
+  width: 10px;
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
@@ -88,7 +88,7 @@
   position: absolute;
   top: -80%;
   left: -30%;
-  width: 25px;
+  width: 40px;
   height: auto;
   filter: drop-shadow(0 0 10px #fffdef);
   z-index: 2;
@@ -108,7 +108,7 @@
   position: absolute;
   top: 55%;
   left: 25%;
-  width: 5px;
+  width: 10px;
   height: auto;
   filter: drop-shadow(0 0 10px #fffdef);
   z-index: 2;
@@ -118,7 +118,7 @@
   position: absolute;
   top: 30%;
   left: 80%;
-  width: 8px;
+  width: 15px;
   height: auto;
   filter: drop-shadow(0 0 10px #fffdef);
   z-index: 2;
@@ -128,7 +128,7 @@
   position: absolute;
   top: 25%;
   left: 115%;
-  width: 15px;
+  width: 20px;
   height: auto;
   filter: drop-shadow(0 0 10px #fffdef);
   z-index: 2;
@@ -136,9 +136,9 @@
 
 .playButton:hover .star-6 {
   position: absolute;
-  top: 5%;
+  top: -10%;
   left: 60%;
-  width: 5px;
+  width: 20px;
   height: auto;
   filter: drop-shadow(0 0 10px #fffdef);
   z-index: 2;
