--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,18 +20,21 @@
   font-size: 40px;
 }
 
+.myInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 17px;
+  padding: 2% 0 5% 0;
+  gap: 3px;
+}
+
 .Main-Title {
   font-size: 90px;
 }
 
 .welcomeButtonContainer {
   padding-top: 29%;
-}
-
-.contactMe {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .phoneNumberContainer {
@@ -58,14 +61,16 @@
 }
 
 .aboutMeTitle {
-  font-size: 40px;
+  font-size: 50px;
+  padding: 1% 0;
 }
 
 .aboutMeText {
   width: 25%;
-  font-size: 20px;
-  text-align: justify;
-  word-spacing: 5px;
+  font-size: 23px;
+  text-align: center;
+  word-spacing: 3px;
+  padding: 0 0 1% 0;
 }
 
 .cardsContainer {
@@ -73,11 +78,27 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10%;
   width: 100%;
-  padding-top: 5%;
+  height: 50vh;
+  gap: 6%;
+  padding: 5% 0;
 }
 
 .cardsContainer > * {
   cursor: pointer;
+}
+
+.socials-Title {
+  font-size: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 7%;
+}
+
+.contactMe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4% 0;
 }
