--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,15 +20,6 @@
   font-size: 40px;
 }
 
-.myInfo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: 17px;
-  padding: 2% 0 5% 0;
-  gap: 3px;
-}
-
 .Main-Title {
   font-size: 90px;
 }
@@ -73,6 +64,23 @@
   padding: 0 0 1% 0;
 }
 
+.myInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 17px;
+  padding: 2% 0 3.5% 0;
+  gap: 3px;
+}
+
+.cvButton {
+  padding-bottom: 5%;
+}
+
+.cvButtonSize {
+  font-size: 25px !important;
+}
+
 .cardsContainer {
   display: flex;
   flex-direction: row;
@@ -101,4 +109,11 @@
   justify-content: center;
   align-items: center;
   padding: 4% 0;
+}
+
+.projectsContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5% 0;
 }
