- same way of adding styles -  case sensitivity fix index.js

--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -12,7 +12,7 @@
   cursor: pointer;
 }
 
-.star-1 {
+.starOne {
   position: absolute;
   top: 20%;
   left: 20%;
@@ -23,7 +23,7 @@
   transition: all 1s cubic-bezier(0.05, 0.83, 0.43, 0.96);
 }
 
-.star-2 {
+.starTwo {
   position: absolute;
   top: 45%;
   left: 45%;
@@ -34,7 +34,7 @@
   transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
 }
 
-.star-3 {
+.starThree {
   position: absolute;
   top: 40%;
   left: 40%;
@@ -45,7 +45,7 @@
   transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
 }
 
-.star-4 {
+.starFour {
   position: absolute;
   top: 20%;
   left: 40%;
@@ -56,7 +56,7 @@
   transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
 }
 
-.star-5 {
+.starFive {
   position: absolute;
   top: 25%;
   left: 45%;
@@ -67,7 +67,7 @@
   transition: all 0.6s cubic-bezier(0, 0.4, 0, 1.01);
 }
 
-.star-6 {
+.starSix {
   position: absolute;
   top: 5%;
   left: 50%;
@@ -84,7 +84,7 @@
   box-shadow: 0 0 25px #fec1958c;
 }
 
-.playButton:hover .star-1 {
+.playButton:hover .starOne {
   position: absolute;
   top: -80%;
   left: -30%;
@@ -94,7 +94,7 @@
   z-index: 2;
 }
 
-.playButton:hover .star-2 {
+.playButton:hover .starTwo {
   position: absolute;
   top: -25%;
   left: 10%;
@@ -104,7 +104,7 @@
   z-index: 2;
 }
 
-.playButton:hover .star-3 {
+.playButton:hover .starThree {
   position: absolute;
   top: 55%;
   left: 25%;
@@ -114,7 +114,7 @@
   z-index: 2;
 }
 
-.playButton:hover .star-4 {
+.playButton:hover .starFour {
   position: absolute;
   top: 30%;
   left: 80%;
@@ -124,7 +124,7 @@
   z-index: 2;
 }
 
-.playButton:hover .star-5 {
+.playButton:hover .starFive {
   position: absolute;
   top: 25%;
   left: 115%;
@@ -134,7 +134,7 @@
   z-index: 2;
 }
 
-.playButton:hover .star-6 {
+.playButton:hover .starSix {
   position: absolute;
   top: -10%;
   left: 60%;
