--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,10 @@
-.Main-Nav {
+.MainNav {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.main-Container-Wrapper {
+.mainContainerWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,11 +16,11 @@
   flex-direction: column;
 }
 
-.hi-Title {
+.hiTitle {
   font-size: 40px;
 }
 
-.Main-Title {
+.MainTitle {
   font-size: 90px;
 }
 
@@ -96,7 +96,7 @@
   cursor: pointer;
 }
 
-.socials-Title {
+.socialsTitle {
   font-size: 40px;
   display: flex;
   justify-content: center;
