--- a/styles/startbutton.module.css
+++ b/styles/startbutton.module.css
@@ -38,7 +38,7 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.startButton:hover .svg-wrapper {
+.startButton:hover .svgWrapper {
   animation: fly-1 0.6s ease-in-out infinite alternate;
 }
 
