--- a/styles/hobby.module.css
+++ b/styles/hobby.module.css
@@ -10,6 +10,13 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  transition: all 1s ease;
+  border-radius: 1%;
+}
+
+.imageTitleContainer:hover {
+  cursor: pointer;
+  background-color: #461d25;
 }
 
 .hobbyImage {
@@ -26,4 +33,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 15px !important;
+}
+
+.backdropFont {
+  font-size: 20px;
+  padding-top: 22%;
+  text-align: center;
 }
